# 12267-hyperpg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  main.py  multi_run.sh  pylintrc  pyproject.toml  vmf_run.sh
configs/: default_config.py  hyperpg_resnet50_birds.py  hyperpg_resnet50_cars.py  hyperpg_resnet50_flowers.py  ppn_densenet121_birds.py  ppn_resnet50_birds.py  ppn_resnet50_flowers.py  ppn_vit16_birds.py  wandb_config.py
configs/baseline/: baseline_convnext.py  baseline_densenet.py  baseline_resnet50_birds.py  baseline_resnet50_cars.py  baseline_resnet50_flowers.py  baseline_vit.py
configs/datasets/: cars_config.py  cub200_config.py  flowers_config.py
src/prob_proto/: pl_training.py
src/prob_proto/datasets/: __init__.py  birds.py  cars.py  dataset_factory.py  flowers.py
src/prob_proto/losses/: __init__.py  ce_loss.py  loss_factory.py  prototype_loss.py
src/prob_proto/models/: __init__.py  bb_baseline.py  model_factory.py  protopnet.py
src/prob_proto/models/backbones/: __init__.py  backbone_factory.py  convnext.py  densenet.py  resnet50.py  vit.py
src/prob_proto/models/prototype_modules/: __init__.py  euclid_prototypes.py  pm_factory.py  sphere_prototypes.py
utils/: bb_crop.py
