[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"


[project]
name = "prob-proto"
version = "1.0.0"
authors = [
    {name = "Anonymous Authors", email="authors@anon.edu"}
]
readme = "README.md"


dependencies = []
